--- a/composer.json
+++ b/composer.json
@@ -38,7 +38,9 @@
     "orchestra/testbench": "^9.0",
     "phpunit/phpunit": "^11.0",
     "codeception/codeception": "^5.1",
-    "friendsofphp/php-cs-fixer": "^3.54"
+    "friendsofphp/php-cs-fixer": "^3.54",
+    "phpstan/phpstan": "^1.10",
+    "rector/rector": "^1.0"
   },
   "autoload": {
     "psr-4": {
@@ -58,7 +60,10 @@
     }
   },
   "scripts": {
-    "lint": "vendor/bin/php-cs-fixer fix --dry-run",
-    "lint:fix": "vendor/bin/php-cs-fixer fix"
+    "lint": "@php php-cs-fixer fix --dry-run --verbose --diff",
+    "lint:fix": "@php php-cs-fixer fix",
+    "stan": "@php phpstan analyse",
+    "rector": "@php rector process src tests --dry-run",
+    "rector:fix": "@php rector process tests src"
   }
 }
