--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,35 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<phpunit xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         bootstrap="vendor/autoload.php"
-         colors="true"
-         convertErrorsToExceptions="true"
-         convertNoticesToExceptions="true"
-         convertWarningsToExceptions="true"
-         processIsolation="false"
-         stopOnFailure="false"
-         xsi:noNamespaceSchemaLocation="https://schema.phpunit.de/9.3/phpunit.xsd"
->
-    <coverage processUncoveredFiles="true">
-        <include>
-            <directory suffix=".php">./src</directory>
-        </include>
-        <exclude>
-            <file>./src/.meta.php</file>
-        </exclude>
-    </coverage>
-    <php>
-        <env name="APP_ENV" value="testing"/>
-        <ini name="error_reporting" value="-1" />
-        <var name="db_type" value="pdo_pgsql"/>
-        <var name="db_host" value="${HOST}" />
-        <var name="db_username" value="${USERNAME}" />
-        <var name="db_password" value="${PASSWORD}" />
-        <var name="db_database" value="${DATABASE}" />
-        <var name="db_port" value="5432"/>
-    </php>
-    <testsuites>
-        <testsuite name="Test suite">
-            <directory suffix="Test.php">./tests</directory>
-        </testsuite>
-    </testsuites>
+<phpunit xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" bootstrap="vendor/autoload.php" colors="true" processIsolation="false" stopOnFailure="false" xsi:noNamespaceSchemaLocation="https://schema.phpunit.de/11.1/phpunit.xsd" cacheDirectory=".phpunit.cache">
+  <php>
+    <env name="APP_ENV" value="testing"/>
+    <env name="DB_TYPE" value="pdo_pgsql"/>
+    <env name="DB_HOST" value="${HOST}"/>
+    <env name="DB_USERNAME" value="${USERNAME}"/>
+    <env name="DB_PASSWORD" value="${PASSWORD}"/>
+    <env name="DB_DATABASE" value="${DATABASE}"/>
+    <env name="DB_PORT" value="5432"/>
+  </php>
+  <testsuites>
+    <testsuite name="Test suite">
+      <directory suffix="Test.php">./tests</directory>
+    </testsuite>
+  </testsuites>
+  <source>
+    <include>
+      <directory suffix=".php">./src</directory>
+    </include>
+    <exclude>
+      <file>./src/.meta.php</file>
+    </exclude>
+  </source>
 </phpunit>
