--- a/composer.json
+++ b/composer.json
@@ -65,6 +65,6 @@
     "stan": "@php phpstan analyse",
     "rector": "@php rector process src tests --dry-run",
     "rector:fix": "@php rector process tests src",
-    "test": "@php phpunit"
+    "test": "@php phpunit tests/"
   }
 }
