--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,19 +17,20 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
+    strategy:
+      matrix:
+        php: [ 8.3 ]
+        postgres-version: [ 15, 16 ]
+
     services:
       postgres:
-        image: postgres:15
+        image: postgres:${{ matrix.postgres-version }}
         env:
           POSTGRES_PASSWORD: ${{ env.DB_PASSWORD }}
           POSTGRES_USER: ${{ env.DB_USERNAME }}
           POSTGRES_DB: ${{ env.DB_DATABASE }}
         ports:
           - 5432:5432
-
-    strategy:
-      matrix:
-        php: [8.3]
 
     steps:
       - uses: actions/checkout@v4
