--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,7 +20,7 @@ jobs:
     strategy:
       matrix:
         php: [ 8.3 ]
-        postgres-version: [ 15, 16 ]
+        postgres-version: [ 14, 15, 16 ]
 
     services:
       postgres:
