--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "umbrellio/laravel-pg-extensions",
+  "name": "fuwasegu/laravel-pg-extensions-next",
   "type": "library",
   "description": "Extensions for Postgres Laravel",
   "minimum-stability": "stable",
@@ -22,49 +22,49 @@
     {
       "name": "Korben Dallas",
       "email": "pvsaintpe@umbrellio.biz"
+    },
+    {
+      "name": "Fuwasegu",
+      "email": "contact@fuwasegu.com"
     }
   ],
-  "suggest": {
-    "umbrellio/laravel-ltree": "Package for working with Postgres LTree extension",
-    "umbrellio/laravel-common-objects": "Package with helpers for common Laravel components"
-  },
-  "support": {
-    "issues": "https://github.com/umbrellio/laravel-pg-extensions/issues",
-    "source": "https://github.com/umbrellio/laravel-pg-extensions"
-  },
   "require": {
     "ext-pdo": "*",
-    "php": "^7.2|^7.3|^7.4|^8.0|^8.1|^8.2",
+    "php": "^8.3",
     "doctrine/dbal": "^2.9|^3.0",
-    "laravel/framework": "^5.8|^6.0|^7.0|^8.0|^9.0|^10.0|^11.0"
+    "laravel/framework": "^11.0"
   },
   "require-dev": {
-    "umbrellio/code-style-php": "^1.0",
-    "orchestra/testbench": "^3.5|^6.0|^4.0|^7.0|^8.0|^9.0",
-    "php-coveralls/php-coveralls": "^2.1|^2.7",
-    "codeception/codeception": "^3.0|^4.0|^5.0",
-    "phpunit/phpunit": "^9.6|^10.0|^11.0"
-  },
-  "scripts": {
-    "lint": [
-      "ecs check --config=ecs.php . --fix"
-    ]
+    "orchestra/testbench": "^9.0",
+    "phpunit/phpunit": "^11.0",
+    "codeception/codeception": "^5.1",
+    "friendsofphp/php-cs-fixer": "^3.54",
+    "phpstan/phpstan": "^1.10",
+    "rector/rector": "^1.0"
   },
   "autoload": {
     "psr-4": {
-      "Umbrellio\\Postgres\\": "src/"
+      "Fuwasegu\\Postgres\\": "src/"
     }
   },
   "autoload-dev": {
     "psr-4": {
-      "Umbrellio\\Postgres\\Tests\\": "tests/"
+      "Fuwasegu\\Postgres\\Tests\\": "tests/"
     }
   },
   "extra": {
     "laravel": {
       "providers": [
-        "Umbrellio\\Postgres\\UmbrellioPostgresProvider"
+        "Fuwasegu\\Postgres\\PostgresExtensionsServiceProvider"
       ]
     }
+  },
+  "scripts": {
+    "lint": "@php php-cs-fixer fix --dry-run --verbose --diff",
+    "lint:fix": "@php php-cs-fixer fix",
+    "stan": "@php phpstan analyse",
+    "rector": "@php rector process src tests --dry-run",
+    "rector:fix": "@php rector process tests src",
+    "test": "@php phpunit tests/"
   }
 }
